<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="title">Title</string>
    <string name="year">(2021)</string>
    <string name="year_template">(%s)</string>
    <string name="rating">8.8</string>
    <string name="category_dummy">Action, Adventure, Drama, Science Fiction</string>
    <string name="detail_dummy">2020 • Action, Adventure, Drama, Science Fiction</string>
    <string name="detail_dummy2">1hr 20m • Movie</string>
    <string name="play">play</string>
    <string name="overview">Overview</string>
    <string name="dummy_overview">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="dummy_rating">8.8</string>
    <string name="menu_favorite">favorite</string>
    <string name="search">SEARCH</string>
    <string name="movie_title">Movie Title</string>

</resources>